--- a/styles/components.css
+++ b/styles/components.css
@@ -1,215 +1,424 @@
 /* nav style */
-.nav{
-    padding: 2rem 0;
+.nav {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100vw;
+  background-color: rgba(249, 153, 111, 0.91);
 }
 .nav__icon,
 .nav__close,
-.nav__bgOverlay{
-    display: none;
+.nav__bgOverlay {
+  display: none;
 }
 
-.nav__wrapper{
+.nav__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.nav__wrapper a img {
+  height: 5em;
+}
+.nav__list li {
+  display: inline-block;
+  margin: 0 1rem;
+}
+.nav__list__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav__list .nav__link {
+  font-size: 1.8em;
+  font-family: "Roboto Slab";
+  color: var(--black-2);
+  padding: 0.5rem;
+}
+.nav__list li:hover .nav__link {
+  color: var(--orange-1);
+}
+@media only screen and (max-width: 768px) {
+  .nav {
+    position: relative;
+  }
+  .nav__icon {
+    display: block;
+  }
+  .nav__icon svg,
+  .nav__close svg {
+    pointer-events: none;
+    height: 30px;
+    width: 30px;
+  }
+  .nav__close {
+    display: block;
+    position: absolute;
+    color: var(--black-1);
+    right: 1rem;
+    top: 1rem;
+    cursor: pointer;
+  }
+  .nav__list {
+    z-index: 1000;
+    left: 100%;
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 80%;
+    background: var(--lightorange-1);
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 2rem;
+    transform: translate(0%);
+    overflow: hidden;
+    transition: 0.3s ease-in transform;
+  }
+  .nav__list.show {
+    transform: translateX(-100%);
+  }
+  .nav__list li {
+    display: block;
+    text-align: right;
+    margin-bottom: 2rem;
+  }
+  .nav__list a {
+    font-size: 1.6rem;
+  }
+  .nav__bgOverlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+    height: 100vh;
+    width: 100%;
+    background: rgba(18, 24, 14, 0.808);
+    display: none;
+  }
+  .nav__bgOverlay.active {
+    display: block;
+  }
 }
-.nav__list li{
-    display: inline-block;
-    margin: 0 1rem;
-}
-.nav__list .nav__link{
-    font-size: 1.8em;
-    font-family: 'Poppins';
-    color: var(--black-2);
-    padding: 0.5rem;
-}
-.nav__list li:hover .nav__link{
-    color: var(--green-1);
-}
-@media only screen and (max-width:768px) {
-    .nav{
-        position: relative ;
-    }
-    .nav__icon{
-        display: block;
-    }
-    .nav__icon svg,
-    .nav__close svg{
-        pointer-events: none;
-        height: 30px;
-        width: 30px;
-    }
-    .nav__close{
-        display: block;
-        position: absolute;
-        color: var(--black-1);
-        right: 1rem;
-        top: 1rem;
-        cursor: pointer;
-    }.nav__list{
-        z-index: 1000;
-        left: 100%;
-        position: absolute;
-        top: 0;
-        height: 100vh;
-        width: 80%;
-        background: var(--lightGreen-1);
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        padding-right: 2rem;
-        transform:translate(0%);
-        overflow: hidden;
-        transition: .3s ease-in transform;
-    }
-    .nav__list.show{
-        transform: translateX(-100%) ;
-    }
-    .nav__list li {
-        display: block;
-        text-align: right;
-        margin-bottom: 2rem;
-    }
-    .nav__list a{
-        font-size: 1.6rem;
-    }
-    .nav__bgOverlay{
-        position: absolute;
-        left: 0;
-        top: 0;
-        z-index: 1000;
-        height: 100vh;
-        width: 100%;
-        background: rgba(18, 24, 14, 0.808);
-        display: none;
-    }
-    .nav__bgOverlay.active{
-        display: block;
-    }
-}
-.btn{
-    color: var(--green-1);
-    font-family: 'Poppins';
-    font-weight: 500;
-    border-radius: 8px;
-    font-size: 1.4rem;
-    padding: 1.2rem 2rem;
+.btn {
+  color: var(--orange-1);
+  font-family: "Roboto Slab";
+  font-weight: 500;
+  border-radius: 8px;
+  font-size: 1.4rem;
+  padding: 1.2rem 2rem;
 }
 
-.primary-btn{
-    color: var(--white-1);
-    background: var(--green-1);
+.primary-btn {
+  color: var(--white-1);
+  background: var(--orange-1);
 }
 
-@media only screen and (min-width:768px) {
-    .btn {
-        padding: 1.3rem 2rem;
-        font-size: 2rem;
-    }
+@media only screen and (min-width: 768px) {
+  .btn {
+    padding: 1.3rem 2rem;
+    font-size: 2rem;
+  }
 }
 
 /* Footer  */
-footer{
-    background: var(--lightGreen-1);
-    padding-top: 5rem;
-    padding-bottom: 2rem;
+footer {
+  width: 100vw;
+  background: var(--lightorange-1);
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+}
+.footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding: 2rem;
+}
+.footer__logo {
+  width: 150px;
+  margin-bottom: 2rem;
+}
+.footer__desc {
+  font-size: 1.4rem;
+  color: var(--black-2);
+  margin-bottom: 2rem;
+  line-height: 2rem;
+}
 
-}
-.footer__wrapper{
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-}
-.footer__logo{
-    width: 150px;
-    margin-bottom: 2rem;
-}
-.footer__desc{
-    font-size: 1.4rem;
-    color: var(--black-2);
-    margin-bottom: 2rem;
-    line-height: 2rem;
-}
-
-.footer__socials__title  {
-    font-size: 1.8rem;
-    color: var(--black-1);
-    margin-bottom: 1rem;
-
+.footer__socials__title {
+  font-size: 1.8rem;
+  color: var(--black-1);
+  margin-bottom: 1rem;
 }
 .footer__socials li {
-    display: inline-block;
-    margin-right: 0.5rem;
+  display: inline-block;
+  margin-right: 0.5rem;
 }
 
 .footer__socials a {
-    padding: 0.5rem 0.8rem;
-    border-color: var(--white-1);
-    border: 1px solid var(--green-2);
-    border-radius: 8px;
+  padding: 0.5rem 0.8rem;
+  border-color: var(--white-1);
+  border: 1px solid var(--orange-2);
+  border-radius: 8px;
 }
 .footer__socials svg {
-    width: 20px;
-    color: var(--black-2);
+  width: 20px;
+  color: var(--black-2);
 }
-.footer__text__title{
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
-    color: var(--black-1);
-    font-weight: 600;
+.footer__text__title {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+  color: var(--black-1);
+  font-weight: 600;
 }
-.footer__text a{
-    font-size: 1.4rem;
-    margin-bottom: 0.5rem;
-    color: var(--black-2);
-    font-family: Raleway;
-    font-weight: 500;
-    line-height: 1.4em;
+.footer__text a {
+  font-size: 1.4rem;
+  margin-bottom: 0.5rem;
+  color: var(--black-2);
+  font-family: Raleway;
+  font-weight: 500;
+  line-height: 1.4em;
 }
 @media only screen and (min-width: 768px) {
-    footer{
-        padding-top: 8rem;
-        padding-bottom: 4rem;
-    }
-    .footer__wrapper{
-        flex-direction: row;
-    }
-    .footer__col1{
-        flex: 4;
-    }
-    .footer__col2,
-    .footer__col3,
-    .footer__col4 {
-        flex: 2;
-    }
-    .footer__desc{
-        max-width: 300px;
-        font-size: 1.8rem;
-        margin-bottom: 2.5rem;
-    }
-    .footer__socials__title{
-        font-size: 2rem;
-        margin-bottom: 1.5rem;
-    }
-    .footer__text__title{
-        font-size: 2rem;
-        margin-bottom: 2rem;
-    }
-    .footer__text a{
-        font-size: 1.8rem;
-        margin-bottom: 1rem;
-    }
+  footer {
+    padding-top: 8rem;
+    padding-bottom: 4rem;
+  }
+  .footer__wrapper {
+    flex-direction: row;
+  }
+  .footer__col1 {
+    flex: 4;
+  }
+  .footer__col2,
+  .footer__col3,
+  .footer__col4 {
+    flex: 2;
+  }
+  .footer__desc {
+    max-width: 300px;
+    font-size: 1.8rem;
+    margin-bottom: 2.5rem;
+  }
+  .footer__socials__title {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+  .footer__text__title {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+  .footer__text a {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+  }
 }
 
-#copyright{
-    padding: 1rem  0;
+#copyright {
+  padding: 1rem 0;
 }
-.copyright__text{
-    font-size: 1.4rem;
-    text-align: center;
+.copyright__text {
+  font-size: 1.4rem;
+  text-align: center;
 }
-@media only screen and (min-width:768px) {
-    .copyright__text{
-        font-size: 1.6rem;
-        text-align-last: left;
-    }
+@media only screen and (min-width: 768px) {
+  .copyright__text {
+    font-size: 1.6rem;
+    text-align-last: left;
+  }
+}
+
+/* Store In4 Style*/
+.storeIn4__wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.storeIn4__item {
+  background-color: var(--lightorange-1);
+  padding: 20px 30px;
+  text-align: center;
+  border-radius: 12px;
+  width: 150px;
+}
+.storeIn4__icon {
+  width: 30px;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+.storeIn4__title {
+  font-size: 1.4rem;
+  font-family: Roboto Slab;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+  color: var(--black-1);
+}
+.storeIn4__text {
+  font-size: 1.4rem;
+  font-family: Raleway;
+  color: var(--black-2);
+}
+@media only screen and (min-width: 768px) {
+  .storeIn4__wrapper {
+    gap: 2rem;
+  }
+  .storeIn4__item {
+    min-width: 200px;
+    padding: 40px 0;
+  }
+  .storeIn4__icon {
+    width: 47px;
+    margin-bottom: 2.5rem;
+  }
+  .storeIn4__title {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+  }
+  .footer__text {
+    font-size: 1.6rem;
+  }
+}
+/* DishGrid style */
+.dishGrid__title {
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  font-weight: 600;
+  color: var(--black-1);
+}
+.dishGrid__wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 1rem;
+}
+.dishGrid__item {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--lightorange-1);
+  padding: 0.5rem;
+  gap: 0.5rem;
+  border-radius: 12px;
+}
+.dishGrid__item__img {
+  flex: 4;
+}
+.dishGrid__item__info {
+  flex: 6;
+}
+.dishGrid__item__img img {
+  object-fit: cover;
+  border-radius: 12px;
+}
+.dishGrid__item__title {
+  font-size: 1.4rem;
+  line-height: 1.3em;
+  font-weight: 300;
+  color: var(--black-1);
+  margin-bottom: 0.5rem;
+}
+.dishGrid__item__price {
+  font-size: 1.4rem;
+  color: var(--orange-1);
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+.dishGrid__item__stars {
+  max-height: 15px;
+  width: max-content;
+}
+@media only screen and (min-width: 768px) {
+  .dishGrid__title {
+    font-size: 2.4rem;
+  }
+  .dishGrid__wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 3rem;
+  }
+  .dishGrid__item {
+    flex-direction: row;
+    padding: 1.5rem;
+    gap: 1rem;
+  }
+  .dishGrid__item__title {
+    font-size: 2.4rem;
+    margin-bottom: 1rem;
+  }
+  .dishGrid__item__price {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+}
+/* Contact Style */
+#form {
+  padding: 5rem 0;
+}
+.form__title {
+  font-size: 1.8rem;
+  color: var(--black-1);
+  font-weight: 600;
+}
+.form__wrapper {
+  padding: 3rem 0;
+}
+.form__wrapper form {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+.form__group label {
+  font-size: 1.6rem;
+  font-family: Roboto Slab;
+  color: var(--black-2);
+  font-weight: 500;
+}
+.form__group input,
+.form__group textarea,
+.form__group select {
+  width: 100%;
+  border: none;
+  background-color: var(--lightorange-1);
+  font-size: 1.4rem;
+  font-family: Raleway;
+  font-weight: 600;
+  padding: 1.5rem;
+  border-radius: 8px;
+  margin-top: 0.5rem;
+  color: var(--black-2);
+}
+.form__group textarea {
+  resize: vertical;
+}
+.form__wrapper button[type="submit"] {
+  width: max-content;
+  border: none;
+  padding: 1rem 4rem;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+}
+@media only screen and (min-width: 768px) {
+  .form__title {
+    font-size: 3.6rem;
+  }
+  .form__wrapper {
+    padding: 5rem 0;
+  }
+  .form__wrapper form {
+    grid-template-columns: 1fr 1fr;
+  }
+  .form__group__full {
+    grid-column: 1/3;
+  }
+  .form__group label {
+    font-size: 1.8rem;
+  }
+  .form__group input,
+  .form__group textarea,
+  .form__group select {
+    padding: 2rem;
+    font-size: 1.8rem;
+    margin-top: 1.5rem;
+  }
 }
