--- a/styles/globalStyle.css
+++ b/styles/globalStyle.css
@@ -1,59 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@0,400;1,400;1,500;1,600&family=Poppins:wght@500;600&family=Raleway:wght@400;500;600&display=swap');
-
-html{
-    font-size: 10px;
-    overflow-x: hidden;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@0,400;1,400;1,500;1,600&family=Roboto Slab:wght@500;600&family=Raleway:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,regular,500,600,700,800,900");
+html {
+  font-size: 10px;
+  overflow-x: hidden;
 }
 
-:root{
-    --green-1:#26643b;
-    --green-2:#a2de96;
-    --lightGreen-1:#d6e5d8;
-    --lightGreen-2:#f5fcf4;
-    --black-1: #3b413a;
-    --black-2: #3f3c3c;
-    --black-3: #5b6359;
-    --white-1: #e8e8e8;
+:root {
+  --orange-1: #ff5100;
+  --orange-2: #f24405;
+  --lightorange-1: #e5dad6;
+  --lightorange-2: #fcf7f4;
+  --black-1: #030303;
+  --black-2: #3f3c3c;
+  --black-3: #5b6359;
+  --white-1: #e8e8e8;
 }
 
-body{
-    background-color: var(--lightGreen-2);
-    overflow-x: hidden;
+body {
+  background-color: var(--lightorange-2);
+  overflow-x: hidden;
 }
 
-section{
-    padding: 100px 0;
+section {
+  padding: 100px 0;
 }
 
 @media only screen and (max-width: 768px) {
-    section{
-        padding: 50px 0;
-    }
+  section {
+    padding: 50px 0;
+  }
 }
 
-.container{
-    max-width: 1200px;
-    width: 90%;
-    margin: 0 auto;
+.container {
+  max-width: 1200px;
+  width: 90%;
+  margin: 0 auto;
 }
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 h1,
 h2,
 h3,
-h4{
-    font-family: 'Poppins',sans-serif;
+h4 {
+  font-family: "Roboto Slab", sans-serif;
 }
-p{
-    font-family: 'Raleway',sans-serif;
-    font-weight: 400;
-    line-height: 1.4rem;
-    font-size: 1.8rem;
+p {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 1.8rem;
 }
-a{
-    display: inline-block;
-    text-decoration: none;
+a {
+  display: inline-block;
+  text-decoration: none;
 }
+/*
+#return-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+  display: none;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+  color: #fff;
+  top: 5px;
+} */
