--- a/styles/components.css
+++ b/styles/components.css
@@ -422,3 +422,168 @@ footer {
     margin-top: 1.5rem;
   }
 }
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: var(--orange-1);
+  color: white;
+  cursor: pointer;
+  padding: 5px 7px;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+#myBtn:hover {
+  background-color: var(--black-1);
+}
+
+.ui.message {
+  box-shadow: none !important;
+  color: #2c2c2c !important;
+}
+/* color adjustments specifically for the positive message,
+should be overriden in Semantic */
+.ui.positive.message {
+  background-color: #e0efcb;
+}
+.close {
+  color: rgba(44, 44, 44, 0.4);
+}
+.close:hover {
+  color: rgba(44, 44, 44, 0.6);
+}
+.fa-check-circle {
+  font-size: 14px;
+  position: relative;
+  bottom: 1px;
+  margin-right: 4px;
+  opacity: 0.75;
+}
+/* Ignore this, this is just to make CodePen look nice :) */
+.msgs {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 800px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  margin-top: 128px;
+}
+.msg-container {
+  position: relative;
+  height: 200px;
+}
+button {
+  background: none;
+  border: none;
+  background-color: #f2f2f2;
+  color: #2c2c2c;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 16px;
+}
+button:focus {
+  outline: none;
+}
+
+.banners-container {
+  position: fixed;
+  top: 100px;
+  left: 0;
+  width: 100%;
+}
+
+.banner {
+  color: white;
+  font-weight: 700;
+  padding: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.banner .banner-message {
+  flex: 1;
+  padding: 0 2rem;
+  font-size: 1.8rem;
+  font-family: Roboto Slab;
+}
+.banner .banner-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+.banner .banner-close:hover {
+  background: rgba(0, 0, 0, 0.12);
+}
+
+.banner.success {
+  background: #10c15c;
+}
+.banner.success::after {
+  background: #10c15c;
+}
+.banner.error {
+  background: #ed1c24;
+}
+.banner.error::after {
+  background: #ed1c24;
+}
+
+.banner::after {
+  content: "";
+  position: absolute;
+  height: 10%;
+  width: 100%;
+  bottom: 100%;
+  left: 0;
+}
+
+.banner:not(.visible) {
+  display: none;
+  transform: translateY(-100%);
+}
+
+.banner.visible {
+  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.12);
+  animation-name: banner-in;
+  animation-direction: forwards;
+  animation-duration: 0.6s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+}
+
+@keyframes banner-in {
+  0% {
+    transform: translateY(-100%);
+  }
+  50% {
+    transform: translateY(10%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.show-banner {
+  appearance: none;
+  background: #ededed;
+  border: 0;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  cursor: pointer;
+  text-transform: uppercase;
+  margin: 0.25rem;
+}
