--- a/styles/home.css
+++ b/styles/home.css
@@ -116,9 +116,8 @@
   margin-bottom: 1rem;
 }
 .ourSpecials__item__stars {
-  height: 1.4rem;
+  height: 2.6rem;
   width: max-content;
-  margin-bottom: 1rem;
 }
 .ourSpecials__item__text {
   font-size: 1.4rem;
@@ -158,7 +157,6 @@
   }
   .ourSpecials__item__title {
     font-size: 2.4rem;
-    line-height: 1.4rem;
     margin-bottom: 1.5rem;
   }
   .ourSpecials__item__price {
@@ -241,10 +239,13 @@
 .discount__newPrice {
   color: var(--orange-1);
 }
-.discount__stars {
+.discount__stars img {
   width: max-content;
-  height: 15px;
+  height: 30px;
   margin: 1rem 0;
+}
+.discount__stars {
+  margin-bottom: 1rem;
 }
 @media only screen and (min-width: 768px) {
   .discount__wrapper {
@@ -644,246 +645,245 @@
 
 /*NV Thuận Why Us section style*/
 .whyUs__wrapper {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	gap: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 4rem;
 }
 .whyUs__left {
-	text-align: center;
+  text-align: center;
 }
 .whyUs__title {
-	font-family: Poppins;
-	font-size: 1.8rem;
-	color: var(--black-1);
-	font-weight: 500;
-	margin-bottom: 1rem;
+  font-family: Poppins;
+  font-size: 1.8rem;
+  color: var(--black-1);
+  font-weight: 500;
+  margin-bottom: 1rem;
 }
 .whyUs__text {
-	font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 .whyUs__items__wrapper {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
 }
 .whyUs__item {
-	background: var(--lightGreen-1);
-	padding: 2rem;
-	border-radius: 12px;
-	text-align: center;
+  background: var(--lightGreen-1);
+  padding: 2rem;
+  border-radius: 12px;
+  text-align: center;
 }
 .whyUs_item__icon {
-	max-width: 56px;
-	margin: 0 auto;
-	margin-bottom: 1rem;
+  max-width: 56px;
+  margin: 0 auto;
+  margin-bottom: 1rem;
 }
 .whyUs__item__text {
-	font-family: Poppins;
-	font-size: 1.4rem;
-	font-weight: 500;
-	color: var(--black-1);
+  font-family: Poppins;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: var(--black-1);
 }
 @media only screen and (min-width: 786px) {
-	.whyUs__wrapper {
-		flex-direction: row;
-		max-width: 900px;
-		margin: 0 auto;
-	}
-	.whyUs__left {
-		flex: 4;
-		text-align: left;
-	}
-	.whyUs__right {
-		flex: 3;
-	}
-	.whyUs__title {
-		font-size: 3.6rem;
-		margin-bottom: 2rem;
-	}
-	.whyUs__text {
-		font-size: 1.8rem;
-		line-height: 1.4em;
-	}
-	.whyUs__items__wrapper {
-		gap: 1.5rem;
-	}
-	.whyUs__item {
-		padding: 2rem;
-	}
-	.whyUs_item__icon {
-		max-width: 65px;
-		margin-bottom: 1.5rem;
-	}
-	.whyUs__item__text {
-		font-size: 1.8rem;
-	}
+  .whyUs__wrapper {
+    flex-direction: row;
+    max-width: 900px;
+    margin: 0 auto;
+  }
+  .whyUs__left {
+    flex: 4;
+    text-align: left;
+  }
+  .whyUs__right {
+    flex: 3;
+  }
+  .whyUs__title {
+    font-size: 3.6rem;
+    margin-bottom: 2rem;
+  }
+  .whyUs__text {
+    font-size: 1.8rem;
+    line-height: 1.4em;
+  }
+  .whyUs__items__wrapper {
+    gap: 1.5rem;
+  }
+  .whyUs__item {
+    padding: 2rem;
+  }
+  .whyUs_item__icon {
+    max-width: 65px;
+    margin-bottom: 1.5rem;
+  }
+  .whyUs__item__text {
+    font-size: 1.8rem;
+  }
 }
 /* NV Thuan - Testimonial section styles */
 .testimonial__wrapper {
-	max-width: 400px;
-	margin: 0 auto;
+  max-width: 400px;
+  margin: 0 auto;
 }
 .testimonial__title {
-	font-size: 1.8rem;
-	margin-bottom: 3rem;
-	text-align: center;
-	text-transform: capitalize;
-	color: var(--black-1);
+  font-size: 1.8rem;
+  margin-bottom: 3rem;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--black-1);
 }
 .testimonial__items__wrapper {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
 }
 .testimonial__item {
-	padding: 1rem;
-	display: flex;
-	gap: 1rem;
-	background: var(--lightGreen-1);
-	border-radius: 12px;
+  padding: 1rem;
+  display: flex;
+  gap: 1rem;
+  background: var(--lightGreen-1);
+  border-radius: 12px;
 }
 .testimonial__item__info {
-	flex: 4;
+  flex: 4;
 }
 .testimonial__item__img {
-	flex: 2;
-	border-radius: 12px;
-	overflow: hidden;
-	height: 100%;
-	width: 100%;
+  flex: 2;
+  border-radius: 12px;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
 .testimonial__item__img img {
-	object-fit: cover;
+  object-fit: cover;
 }
 .testimonial__item__name {
-	font-size: 1.4rem;
-	font-family: poppins;
-	margin-bottom: 1rem;
-	color: var(--black-1);
+  font-size: 1.4rem;
+  font-family: poppins;
+  margin-bottom: 1rem;
+  color: var(--black-1);
 }
 .testimonial__item__stars {
-	max-height: 15px;
-	width: max-content;
-	margin-bottom: 1.5rem;
+  max-height: 15px;
+  width: max-content;
+  margin-bottom: 1.5rem;
 }
 .testimonial__item__text {
-	font-size: 1.4rem;
+  font-size: 1.4rem;
 }
-@media only screen and (min-width: 768){
-	.testimonial__wrapper {
-		max-width: 900px;
-	}
-	.testimonial__title {
-		font-size: 3.6rem;
-		margin-bottom: 5rem;
-	}
-	.testimonial__items__wrapper {
-		grid-template-columns: 1fr 1fr;
-	}
-	.testimonial__item {
-		padding: 2rem;
-	}
-	.testimonial__item__name {
-		font-size: 1.8rem;
-		margin-bottom: 1.5rem;
-	}
-	.testimonial__item__stars {
-		margin-bottom: 2rem;
-	}
-	.testimonial__item__text {
-		font-size: 1.6rem;
-		line-height: 1.4em;
-	}
+@media only screen and (min-width: 768) {
+  .testimonial__wrapper {
+    max-width: 900px;
+  }
+  .testimonial__title {
+    font-size: 3.6rem;
+    margin-bottom: 5rem;
+  }
+  .testimonial__items__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+  .testimonial__item {
+    padding: 2rem;
+  }
+  .testimonial__item__name {
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+  }
+  .testimonial__item__stars {
+    margin-bottom: 2rem;
+  }
+  .testimonial__item__text {
+    font-size: 1.6rem;
+    line-height: 1.4em;
+  }
 }
-@media only screen and (max-width: 350px){
-	.testimonial__item {
-		flex-direction: column;
-	}
-	.testimonial__item__img,
-	.testimonial__item__info {
-		flex: auto;
-	}
+@media only screen and (max-width: 350px) {
+  .testimonial__item {
+    flex-direction: column;
+  }
+  .testimonial__item__img,
+  .testimonial__item__info {
+    flex: auto;
+  }
 }
 /*NV Thuan - Newsletter Section style*/
 .newsletter__wrapper {
-	display: flex;
-	flex-direction: column;
-	background-color: var(--green-2);
-	padding: 1.5rem;
-	border-radius: 8px;
-	gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--green-2);
+  padding: 1.5rem;
+  border-radius: 8px;
+  gap: 2rem;
 }
 .newsletter__title {
-	font-size: 1.8rem;
-	color: var(--black-1);
-	font-weight: 600;
-	margin-bottom: 1.3rem;
+  font-size: 1.8rem;
+  color: var(--black-1);
+  font-weight: 600;
+  margin-bottom: 1.3rem;
 }
 .newsletter__text {
-	font-size: 1.4rem;
-	color: var(--green-1);
-	font-weight: 500;
+  font-size: 1.4rem;
+  color: var(--orange-1);
+  font-weight: 500;
 }
 .newsletter__form form {
-	position: relative;
-	width: 100%;
-	border-radius: 8px;
-	overflow: hidden;
+  position: relative;
+  width: 100%;
+  border-radius: 8px;
+  overflow: hidden;
 }
 .newsletter__form label {
-	width: 100%;
+  width: 100%;
 }
 .newsletter__form input {
-	width: 100%;
-	font-size: 1.4rem;
-	padding: 1.5rem 1rem;
-	border: none;
+  width: 100%;
+  font-size: 1.4rem;
+  padding: 1.5rem 1rem;
+  border: none;
 }
 .newsletter__form input::placeholder {
-	color: rgb(168, 166, 166);
+  color: rgb(168, 166, 166);
 }
-.newsletter__form button[type='submit'] {
-	background-color: var(--green-1);
-	color: var(--white-1);
-	border: none;
-	font-size: 1.4rem;
-	padding: 0 2rem;
-	height: 100%;
-	position: absolute;
-	right: 0;
-	top: 0;
+.newsletter__form button[type="submit"] {
+  background-color: var(--orange-1);
+  color: var(--white-1);
+  border: none;
+  font-size: 1.4rem;
+  padding: 0 2rem;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
-@media only screen and (min-width: 768px){
-	.newsletter__wrapper {
-		flex-direction: row;
-		padding: 5rem;
-		align-items: center;
-	}
-	.newsletter__form,
-	.newsletter__info {
-		flex: 1;
-	}
-	.newsletter__title {
-		font-size: 3.6rem;
-		margin-bottom: 2rem;
-	}
-	.newsletter__text {
-		font-size: 1.8rem;
-		max-width: 400px;
-	}
-	.newsletter__form {
-		max-width: 450px;
-		border-radius: 12px;
-	}
-	.newsletter__form input {
-		font-size: 1.8rem;
-		padding: 2rem;
-	}
-	.newsletter__form botton[type='submit'] {
-		font-size: 1.8rem;
-		padding: 0 3rem;
-	}
+@media only screen and (min-width: 768px) {
+  .newsletter__wrapper {
+    flex-direction: row;
+    padding: 5rem;
+    align-items: center;
+  }
+  .newsletter__form,
+  .newsletter__info {
+    flex: 1;
+  }
+  .newsletter__title {
+    font-size: 3.6rem;
+    margin-bottom: 2rem;
+  }
+  .newsletter__text {
+    font-size: 1.8rem;
+    max-width: 400px;
+  }
+  .newsletter__form {
+    max-width: 450px;
+    border-radius: 12px;
+  }
+  .newsletter__form input {
+    font-size: 1.8rem;
+    padding: 2rem;
+  }
+  .newsletter__form botton[type="submit"] {
+    font-size: 1.8rem;
+    padding: 0 3rem;
+  }
 }
-
