--- a/styles/components.css
+++ b/styles/components.css
@@ -62,6 +62,9 @@
     top: 1rem;
     cursor: pointer;
   }
+  .nav__list__wrapper {
+    flex-direction: column;
+  }
   .nav__list {
     z-index: 1000;
     left: 100%;
